syntax = "proto3";

option csharp_namespace = "Parstech.Shop.Shared.Protos.RoleAdmin";

package roleAdmin;

service RoleAdminService {
  // Role operations
  rpc GetAllRoles (EmptyRequest) returns (RolesResponse);
  rpc CreateRole (RoleRequest) returns (ResponseDto);
  rpc UpdateRole (RoleRequest) returns (ResponseDto);
  rpc DeleteRole (RoleIdRequest) returns (ResponseDto);
}

// Request messages
message EmptyRequest {
}

message RoleRequest {
  string id = 1;
  string name = 2;
  string persianName = 3;
}

message RoleIdRequest {
  string id = 1;
}

// Response messages
message RolesResponse {
  bool status = 1;
  string message = 2;
  int32 code = 3;
  repeated RoleDto roles = 4;
}

message RoleDto {
  string id = 1;
  string name = 2;
  string persianName = 3;
}

message ResponseDto {
  bool status = 1;
  string message = 2;
  int32 code = 3;
} 